--- a/public/templates/sell.html
+++ b/public/templates/sell.html
@@ -1,8 +1,7 @@
-<h1>Products Page</h1>
+<h4>Pick Your Poison</h4>
 <div class="product" ng-repeat="product in products">
   <h2>Product: {{product.name}}</h2>
   <h2>Description: {{product.description}}</h2>
   <h2>Price: ${{product.price}}</h2>
   <button>Buy</button>
-
 </div>
