--- a/public/styles.css
+++ b/public/styles.css
@@ -1,15 +1,20 @@
+html {
+  background-color: black;
+}
+
 body {
   height: 100%;
   width: 100%;
-  background-color: beige;
-  text-align: center;
+  background-color: #bcb8ad;
+  text-align: right;
 }
 
 header {
-  height: 100px;
+  height: 3%;
   width: 100%;
   background-color: #f7bb09;
   margin-top: none;
+  position: static;
 }
 
 h1 {
@@ -19,6 +24,7 @@ h1 {
   padding-top: 30px;
   padding-left: 20px;
   font-weight: normal;
+
 }
 
 h2, input {
@@ -52,6 +58,15 @@ footer p {
 }
 h4 {
   text-align: left;
+  font-style: normal;
   text-decoration: underline;
-  
 }
+
+.nav {
+  padding-right: 20px;
+  font-weight: bold;
+  color: black;
+}
+ form {
+text-align: left;
+ }
